--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="confirmation_delete_from_mega" context="confirmation message before removing a file">Are you sure you want to delete this element permanently?</string>
     <string name="confirmation_delete_from_mega_plural" context="confirmation message before removing a file">Are you sure you want to delete these elements permanently?</string>
     <string name="title_delete_from_mega" context="confirmation message before removing a file">Delete from MEGA</string>
-    <string name="confirmation_leave_share_folder" context="confirmation message before leaving an incoming shared folder">If you leave the folder, you will not be able to see it again</string>
+    <string name="confirmation_leave_share_folder" context="confirmation message before leaving an incoming shared folder">If you leave a folder, you will not be able to see it again. Do you want to continue?</string>
     
     <string name="confirmation_alert" context="confirmation message before removing a file">Confirmation alert</string>
     
@@ -346,6 +346,8 @@
     <string name="context_no_removed" context="error message">Error. Not removed from MEGA</string>
     <string name="number_correctly_removed" context="success message when moving a node">%d items correctly removed from MEGA</string>
     <string name="number_no_removed" context="error message when moving a node">, %d items not correctly removed</string>
+    <string name="number_correctly_leaved" context="success message when moving a node">%d folders correctly leaved</string>
+    <string name="number_no_leaved" context="error message when moving a node">, %d folders not correctly leaved</string>
     <string name="number_correctly_sent" context="success message when sending multiple files">File correctly sent to %d contacts</string>
     <string name="number_no_sent" context="error message when sending multiple files">, not sent to %d contacts</string>
     <string name="number_correctly_sent_multifile" context="success message when sending multiple files">%d files correctly sent</string>
