--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -372,6 +372,9 @@
     <string name="menu_add_contact" context="Menu option to add a contact to your contact list.">Añadir un contacto</string>
     <string name="menu_download_from_link" context="Text that is displayed in the dialog to download a MEGA link inside the app">Descargar desde enlace MEGA</string>
     
+    <string name="alert_decryption_key" context="Title of the alert to introduce the decryption key">Clave de descifrado</string>
+    <string name="message_decryption_key" context="Message of the alert to introduce the decryption key">Por favor, introduce la clave de descifrado del enlace</string>
+    
     <string name="upload_to_image" context="upload to. Then choose an Image file">Imagen</string>
 	<string name="upload_to_audio" context="upload to. Then choose an Audio file">Audio </string>
 	<string name="upload_to_video" context="upload to. Then choose a Video file">Vídeo</string>
