--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,7 +31,8 @@
     <string name="general_updating" context="state while upgrading the account">Updating&#8230;</string>  
     <string name="general_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Storage</string>
     <string name="general_bandwidth" context="Text listed before the amount of bandwidth a user gets with a certain package. For example: &quot;8TB Bandwidth&quot;. Can also be translated as data transfer.">Bandwidth</string>
-    <string name="general_subscribe" context="Text placed inside the button the user clicks when upgrading to PRO. Meaning: subscribe to this plan">Subscribe</string>  
+    <string name="general_subscribe" context="Text placed inside the button the user clicks when upgrading to PRO. Meaning: subscribe to this plan">Subscribe</string>
+    <string name="general_continue" context="Text placed inside the button the user clicks when clicking into the FREE account. Meaning: Continue to the main screen">Continue</string>  
     <string name="general_error_word" context="It will be followed by the error message">Error</string> 
     <string name="general_error_file_not_found" context="Message shown when a file doesn't exist">File link not found</string>
     <string name="general_error_folder_not_found" context="Message shown when a folder doesn't exist">Folder link not found</string>
