--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -21,7 +21,6 @@
     <string name="general_loading" context="state previous to import a file">Carregando...</string>
     <string name="general_importing" context="state while importing the file">Importando...</string>
     <string name="general_import" context="Import button. When the user clicks this button the file will be imported to his account.">Importar</string>
-    <string name="general_updating" context="state while upgrading the account">Atualizando...</string>  
     <string name="general_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Armazenamento</string>
     <string name="general_bandwidth" context="Text listed before the amount of bandwidth a user gets with a certain package. For example: &quot;8TB Bandwidth&quot;. Can also be translated as data transfer.">Largura de banda</string>
     <string name="general_error_word" context="It will be followed by the error message">Erro</string> 
@@ -35,8 +34,6 @@
     <string name="confirmation_remove_contact" context="confirmation message before removing a contact. Do not write question mark">Deseja remover este contato</string>    
     <string name="confirmation_remove_multiple_contacts" context="confirmation message before removing mutiple contacts">Do you want these contacts?</string>  
     
-    <string name="action_change_mode_in" context="Folders that have been shared with the user from other MEGA users">Compartilhamentos de entrada</string>
-    <string name="action_change_mode_out" context="Folders that have been shared by the user to other MEGA users">Compartilhamentos</string>
     <string name="action_logout" context="Button where the user can sign off or logout">Deslogar</string>
     <string name="action_add" context="Menu item">Enviar...</string>
     <string name="action_create_folder" context="Menu item">Criar nova pasta</string>
@@ -101,7 +98,6 @@
     <string name="tour_text_1" context="Not translate. design text">Lorem ipsum dolor sit amet</string>
     <string name="tour_text_2" context="Not translate. design text">Sed ut perspiciatis unde omnis iste natus</string>
     <string name="create_account" context="label and text button when creating the account">Criar uma conta</string>
-    <string name="login_logging_in" context="label when logging in to MEGA">Logando</string>
     <string name="error_enter_email" context="when the user tries to log in MEGA without typing the email">Por favor, digite seu e-mail</string>
     <string name="error_invalid_email" context="error when logging in to MEGA with an invalid email">Endereço de e-mail inválido</string>
     <string name="error_enter_password" context="when the user tries to log in MEGA without typing the password">Por favor digite sua senha</string>
@@ -136,9 +132,8 @@
 	<string name="section_shared_with_me" context="title of the screen that shows all the folders that the user shares with other users and viceversa">Compartilhado comigo</string>
 	<string name="section_rubbish_bin" context="The title of the trash bin in the tree of the file manager.">Lixeira</string>
 	<string name="section_contacts" context="Title of the contact list">Contatos</string>
-	<string name="tab_contacts" context="Title of the contact tab. Capital letters">CONTATOS</string>
-	<string name="tab_sent_requests" context="Title of the sent requests tab. Capital letters">PEDIDOS ENVIADOS</string>
-	<string name="tab_received_requests" context="Title of the received requests tab. Capital letters">PEDIDOS RECEBIDOS</string>
+	<string name="tab_sent_requests" context="Title of the sent requests tab. Capital letters">Pedidos enviados</string>
+	<string name="tab_received_requests" context="Title of the received requests tab. Capital letters">Pedidos recebidos</string>
 	<string name="sent_requests_empty" context="the user has not sent any contact request to other users">Sem solicitações enviadas</string>
 	<string name="received_requests_empty" context="the user has not received any contact request from other users">Sem solicitações recebidos</string>
 	<string name="section_transfers" context="Title for the file transfer screen (with the up &amp; download)">Transferências</string>
@@ -146,8 +141,8 @@
 	<string name="section_account" context="button to the settings of the user\'s account">Minha conta</string>
 	<string name="section_photo_sync" context="title of the screen where the camera images are uploaded">Uploads da câmera</string>
 	<string name="used_space" context="Used space &quot;5MB of 100MB&quot;.">%1$s de %2$s</string>
-	<string name="tab_incoming_shares" context="Capital letters. Incoming shared folders. The title of a tab">PASTA DE ENTRADA</string>
-	<string name="tab_outgoing_shares" context="Capital letters. Outgoing shared folders. The title of a tab">COMPARTILHAMENTOS</string>
+	<string name="tab_incoming_shares" context="Capital letters. Incoming shared folders. The title of a tab">Pasta de entrada</string>
+	<string name="tab_outgoing_shares" context="Capital letters. Outgoing shared folders. The title of a tab">Compartilhamentos</string>
 	
 	<string name="file_browser_empty_cloud_drive" context="message when there are no files in the Cloud Drive">Nenhum arquivo na sua pasta Cloud</string>
 	<string name="file_browser_empty_rubbish_bin" context="message when there are no files in the Rubbish Bin">Limpar lixeira</string>
@@ -172,7 +167,6 @@
 	<string name="file_properties_shared_folder_permissions" context="Item menu option upon clicking on a file folder. Refers to the permissions of a file folder in the file manager.">Permissões:</string>
 	<string name="file_properties_shared_folder_change_permissions" context="menu item">Mudar permissões</string>
 	<string name="file_properties_shared_folder_select_contact" context="menu item">Compartilhar com</string>
-	<string name="file_properties_shared_folder_list_shares" context="when listing all the contacts that shares a folder">Compartilhado com</string>
 	<string name="file_properties_send_file_select_contact" context="send a file to a MEGA user">Enviar para</string>
 	
 	<string name="contact_properties_activity" context="title of the contact properties screen">Informações do contato</string>
@@ -378,7 +372,6 @@
     <string name="november">Novembro</string>
     <string name="december">Dezembro</string>
     
-    <string name="pdf_file_viewer_activity" context="title of the screen that shows the pdf files">Visualizador de PDF MEGA</string>
     <string name="zip_browser_activity" context="title of the screen that shows the ZIP files">Navegador de arquivos ZIP</string>
     
     <string name="my_account_title" context="title of the My Account screen">Tipo da conta:</string>
