--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,13 +22,11 @@
     <string name="general_create" context="This is the final button when creating a folder in the dialog where the user inserts the folder name">Create</string>
     <string name="general_upload" context="Button text when uploading a file to a previously selected location in MEGA">Upload File</string>
     <string name="general_download" context="Item menu option upon right click on one or multiple files.">Download</string>
-    <string name="general_download_here" context="Item menu option upon right click on one or multiple files.">Download Here</string>
     <string name="general_add" context="button">Add</string>
     <string name="general_empty" context="Button to delete the contents of the trashbin. Can also be translated as &quot;clear&quot;">Empty</string>
     <string name="general_loading" context="state previous to import a file">Loading&#8230;</string>
     <string name="general_importing" context="state while importing the file">Importing&#8230;</string>
     <string name="general_import" context="Import button. When the user clicks this button the file will be imported to his account.">Import</string>
-    <string name="general_updating" context="state while upgrading the account">Updating&#8230;</string>  
     <string name="general_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Storage</string>
     <string name="general_bandwidth" context="Text listed before the amount of bandwidth a user gets with a certain package. For example: &quot;8TB Bandwidth&quot;. Can also be translated as data transfer.">Bandwidth</string>
     <string name="general_subscribe" context="Text placed inside the button the user clicks when upgrading to PRO. Meaning: subscribe to this plan">Subscribe</string>
@@ -63,8 +61,6 @@
     
     <string name="confirmation_alert" context="confirmation message before removing a file">Confirmation alert</string>
     
-    <string name="action_change_mode_in" context="Folders that have been shared with the user from other MEGA users">Incoming Shares</string>
-    <string name="action_change_mode_out" context="Folders that have been shared by the user to other MEGA users">Outgoing Shares</string>
     <string name="action_logout" context="Button where the user can sign off or logout">Logout</string>
     <string name="action_add" context="Menu item">Upload&#8230;</string>
     <string name="action_create_folder" context="Menu item">Create new folder</string>
@@ -138,7 +134,6 @@
     <string name="dots" context="in the password edittext the user can see the password or asterisks. ··· shows asterisks instead of letters">···</string>
     <string name="new_to_mega" context="This question applies to users that do not have an account on MEGA yet">New to MEGA?</string>
     <string name="create_account" context="label and text button when creating the account">Create an account</string>
-    <string name="login_logging_in" context="label when logging in to MEGA">Logging in</string>
     <string name="error_enter_email" context="when the user tries to log in MEGA without typing the email">Please enter your email address</string>
     <string name="error_invalid_email" context="error when logging in to MEGA with an invalid email">Invalid email address</string>
     <string name="error_enter_password" context="when the user tries to log in MEGA without typing the password">Please enter your password</string>
@@ -191,9 +186,8 @@
 	<string name="section_shared_items" context="title of the screen that shows all the shared items">Shared folders</string>
 	<string name="section_rubbish_bin" context="The title of the trash bin in the tree of the file manager.">Rubbish Bin</string>
 	<string name="section_contacts" context="Title of the contact list">Contacts</string>
-	<string name="tab_contacts" context="Title of the contact tab. Capital letters">CONTACTS</string>
-	<string name="tab_sent_requests" context="Title of the sent requests tab. Capital letters">SENT REQUESTS</string>
-	<string name="tab_received_requests" context="Title of the received requests tab. Capital letters">RECEIVED REQUESTS</string>
+	<string name="tab_sent_requests" context="Title of the sent requests tab. Capital letters">Sent requests</string>
+	<string name="tab_received_requests" context="Title of the received requests tab. Capital letters">Received requests</string>
 	<string name="sent_requests_empty" context="the user has not sent any contact request to other users">No sent requests</string>
 	<string name="received_requests_empty" context="the user has not received any contact request from other users">No received requests</string>
 	<string name="section_transfers" context="Title for the file transfer screen (with the up &amp; download)">Transfers</string>
@@ -201,12 +195,10 @@
 	<string name="section_account" context="button to the settings of the user\'s account">My Account</string>
 	<string name="section_photo_sync" context="title of the screen where the camera images are uploaded">Camera Uploads</string>
 	<string name="used_space" context="Used space &quot;5MB of 100MB&quot;.">%1$s of %2$s</string>
-	<string name="tab_incoming_shares" context="Capital letters. Incoming shared folders. The title of a tab">INCOMING</string>
-	<string name="tab_outgoing_shares" context="Capital letters. Outgoing shared folders. The title of a tab">OUTGOING</string>
+	<string name="tab_incoming_shares" context="Capital letters. Incoming shared folders. The title of a tab">Incoming</string>
+	<string name="tab_outgoing_shares" context="Capital letters. Outgoing shared folders. The title of a tab">Outgoing</string>
 	
-	<string name="tab_cloud_drive_explorer" context="Capital letters. Incoming shared folders. The title of a tab">CLOUD DRIVE</string>
-	<string name="tab_incoming_shares_explorer" context="Capital letters. Incoming shared folders. The title of a tab">INCOMING</string>
-	<string name="title_incoming_shares_explorer" context="Title of the file explorer in tab InCOMING">Incoming Shares</string>
+	<string name="title_incoming_shares_explorer" context="Title of the file explorer in tab INCOMING">Incoming Shares</string>
 	<string name="choose_folder_explorer" context="Title of the button in Incoming Shares tabs">Choose folder</string>
 	
 	<string name="file_browser_empty_cloud_drive" context="message when there are no files in the Cloud Drive">No files in your Cloud Drive</string>
@@ -234,8 +226,7 @@
 	<string name="file_properties_shared_folder_permissions" context="Item menu option upon clicking on a file folder. Refers to the permissions of a file folder in the file manager.">Permissions:</string>
 	<string name="dialog_select_permissions" context="Title of the dialog to choose permissions when sharing.">Sharing Permissions</string>
 	<string name="file_properties_shared_folder_change_permissions" context="menu item">Change permissions</string>
-	<string name="file_properties_shared_folder_select_contact" context="button name">Shared with</string>
-	<string name="file_properties_shared_folder_list_shares" context="when listing all the contacts that shares a folder">Shared with</string>
+	<string name="file_properties_shared_folder_select_contact" context="when listing all the contacts that shares a folder">Shared with</string>
 	<string name="file_properties_send_file_select_contact" context="send a file to a MEGA user">Send to</string>
 	<string name="file_properties_owner" context="shows the owner of an incoming shared folder">Owner:</string>
 	<string name="contact_reinvite" context="option to reinvite a contact">Reinvite</string>	
@@ -256,7 +247,7 @@
 	<string name="download_failed" context="Error message">Download failed</string>
 	<string name="download_downloaded" context="notification message. Example: 1 file downloaded">downloaded</string>
 	<string name="download_downloading" context="Title header on the download page while the file is downloading.">Downloading</string>
-	<string name="text_downloading" context="Text located in each fragment when a download is in progress">Transferring&#8230;</string>
+	<string name="text_downloading" context="Text located in each fragment when a download is in progress. Keep the &#8230; symbol">Transferring&#8230;</string>
 	<string name="download_preparing_files" context="message before the download or upload start ">Preparing files</string>
     <string name="download_began" context="message when the download starts">Download has started</string>
     <string name="download_cancel_downloading" context="Confirmation text when attempting to cancel the download">Do you want to cancel the download?</string>
@@ -278,7 +269,7 @@
     <string name="context_open_link" context="Item menu option upon right click on one or multiple files.">Open</string>
     <string name="context_open_link_title" context="Item menu option upon right click on one or multiple files.">Open link</string>
     <string name="context_renaming" context="while renaming a file or folder">Renaming</string>
-    <string name="context_preparing_provider" context="while file provider is downloading a file">Preparing file&#8230;</string>
+    <string name="context_preparing_provider" context="while file provider is downloading a file. Keep the &#8230; symbol">Preparing file&#8230;</string>
     <string name="context_download" context="Item menu option upon right click on one or multiple files.">Download</string>
     <string name="download_folder" context="Item menu option upon right click on one or multiple files.">Download folder</string>
     <string name="import_folder" context="Item menu option upon right click on one or multiple files.">Import folder</string>
@@ -294,7 +285,7 @@
     <string name="context_delete_from_mega" context="menu item">Delete from MEGA</string>
     <string name="context_new_folder_name" context="Input field description in the create folder dialog.">Folder Name</string>
     <string name="context_new_contact_name" context="when adding a new contact. in the dialog">Contact email</string>
-    <string name="context_creating_folder" context="status">Creating folder&#8230;</string>
+    <string name="context_creating_folder" context="status dialog when performing the action. Keep the &#8230; symbol">Creating folder&#8230;</string>
     <string name="context_adding_contact" context="Adding a new relationship (contact)">Adding contact</string>
     <string name="context_download_to" context="Menu item">Save to</string>
     <string name="context_clear_rubbish" context="Menu option">Clear Rubbish Bin</string>
@@ -373,7 +364,7 @@
     <string name="context_select_one_file" context="option available for just one file">Select just one file.</string>
     
     <string name="dialog_cancel_subscriptions" context="dialog cancel subscriptions">You are about to cancel your Mega subscription. Please let us know, if there is anything we can do to help change your mind.</string>
-    <string name="hint_cancel_subscriptions" context="hint cancel subscriptions dialog">Type feedback here...</string>
+    <string name="hint_cancel_subscriptions" context="hint cancel subscriptions dialog.Keep the &#8230; symbol">Type feedback here&#8230;</string>
     <string name="dismiss_cancel_subscriptions" context="dismiss cancel subscriptions dialog">Dismiss</string>
     <string name="send_cancel_subscriptions" context="send cancel subscriptions dialog">Send</string>
     <string name="title_cancel_subscriptions" context="title cancel subscriptions dialog">Cancel Subscription</string>
@@ -568,7 +559,6 @@
     <string name="november">November</string>
     <string name="december">December</string>
     
-    <string name="pdf_file_viewer_activity" context="title of the screen that shows the pdf files">MEGA PDF Viewer</string>
     <string name="zip_browser_activity" context="title of the screen that shows the ZIP files">ZIP Browser</string>
     
     <string name="new_account" context="in login screen to create a new account">Create one account now!</string>
