--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -315,7 +315,7 @@
     <string name="context_permissions_changed" context="success message when chaning the permissionss">Permissions changed</string>
     <string name="context_permissions_not_changed" context="error message">Error. Permissions did not change</string>
     <string name="context_folder_already_exists" context="message when trying to create a folder that already exists">Folder already exists</string>
-    <string name="context_contact_already_exists" context="message when trying to create a invite a contact already that is already added">is already a contact</string>
+    <string name="context_contact_already_exists" context="message when trying to create a invite a contact already that is already added">%s is already a contact</string>
     <string name="context_send_no_permission" context="message when trying to send a file without full access">No permissions to send this file</string>
     <string name="context_folder_created" context="success message when creating a folder">Folder created</string>
     <string name="context_correctly_renamed" context="success message when renaming a node">Successfully renamed</string>
