Bug #3710 - Crash when trying to share a folder when not having contacts

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -230,6 +230,7 @@
 	<string name="contact_file_list_activity" context="header of a status field for what content a user has shared to you">Contenido</string>	
 	<string name="contact_shared_files" context="title of the screen where the folders are shown with the contact owner of those folders">Compartir carpetas con:</string>	
 	<string name="contacts_list_empty_text" context="Adding new relationships (contacts) using the actions.">Añadir nuevos contactos usando el botón inferior.</string>		
+	<string name="no_contacts" context="When an user wants to share a folder but has not any contact yet">No hay contactos en la cuenta. Añádelos en la pantalla de Contactos</string>
 	<string name="error_not_enough_free_space" context="Error message">No hay suficiente espacio</string>
 	<string name="session_problem">Existe un problema con la sesión de usuario</string>
 	
