--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -237,6 +237,7 @@
 	<string name="contact_file_list_activity" context="header of a status field for what content a user has shared to you">Content</string>	
 	<string name="contact_shared_files" context="title of the screen where the folders are shown with the contact owner of those folders">Shared Folders with:</string>	
 	<string name="contacts_list_empty_text" context="Adding new relationships (contacts) using the actions.">Add new contacts using the button below.</string>	
+	<string name="no_contacts" context="When an user wants to share a folder but has not any contact yet">There are not contacts in the account. Please add them on the Contacts screen</string>
 	
 	<string name="error_not_enough_free_space" context="Error message">Not enough free space</string>
 	
